# rquery

./: .travis.yml  Cargo.toml  LICENSE  README.md  search-index.js
rquery/: enum.DocumentError.html  enum.MatchType.html  enum.Scope.html  enum.SelectError.html  enum.Selector.html  index.html  sidebar-items.js  struct.CompoundSelector.html  struct.Document.html  struct.Element.html  struct.UnexpectedTokenError.html
rquery/document/: DocumentError.t.html  enum.DocumentError.html  sidebar-items.js  struct.Document.html
rquery/selector/: CompoundSelector.t.html  UnexpectedTokenError.t.html  enum.MatchType.html  enum.Scope.html  enum.Selector.html  sidebar-items.js  struct.CompoundSelector.html  struct.UnexpectedTokenError.html
src/: lib.rs  selector.rs
src/bitflags/: lib.rs.html
src/document/: mod.rs
src/rquery/: lib.rs.html  selector.rs.html
src/xml/: attribute.rs.html  common.rs.html  escape.rs.html  lib.rs.html  macros.rs.html  name.rs.html  namespace.rs.html  util.rs.html
tests/: children_test.rs  document_test.rs  element_test.rs  lib.rs  querying_by_selectors_test.rs  selector_test.rs  xml_document_test.rs
tests/fixtures/: sample.xml  simple_sample.xml
tests/integration/: css_selectors_test.rs  document_test.rs  element_test.rs  querying_by_selectors_test.rs  selector_test.rs
xml/: index.html  struct.EmitterConfig.html  struct.ParserConfig.html
xml/attribute/: index.html  struct.Attribute.html  struct.OwnedAttribute.html
xml/common/: enum.XmlVersion.html  fn.is_name_char.html  fn.is_name_start_char.html  fn.is_whitespace_char.html  index.html  (+2 more)
(+75 files in other folders)
